# kyopuro-template

./: Main.hs  README.md  hie.yaml
haskell/: kyopuro-template.cabal
rust/: Cargo.toml
rust/cargo-atcoder/: cargo-atcoder-template.toml  gen-cargo-atcoder-toml.sh  init-atcoder-directory.sh
rust/src/: main.rs
