cabal-version:      >=1.10
name:               kyopuro-template
version:            0.1.0.0
license-file:       LICENSE
maintainer:         quietsato@gmail.com
author:             quietsato
build-type:         Simple

executable kyopuro-template
    main-is:          Main.hs
    default-language: Haskell2010
    build-depends:
        base >=4.14 && <4.15,
        array >=0.5,
        vector >=0.12
